# koedeck

./: .env.example  .gitignore  README.md  docker-compose.yml  install.sh  pyproject.toml
src/koedeck/: __init__.py  app.py  config.py  exporter.py  generator.py  models.py  parser.py  preferences.py  reimport.py  setup.py  tagger.py  validator.py
tests/: test_phase1.py  test_phase3.py  test_phase4.py
