[project]
name = "koedeck"
version = "0.1.0"
description = "Script voice pipeline — markdown dialogue to ElevenLabs WAV via local LLM tagging"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "nicegui>=3.6.1",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
app = "koedeck.app:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
